--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                     <div class="tile-content"><i class="fa-solid fa-star"></i><h2>سفارش محصول خاص</h2></div>
                 </div>
                 <div class="category-tile cat-mixer" onclick="initMixer(); showSection('mixer-view')">
-                    <div class="tile-content"><i class="fa-solid fa-flask"></i><h2>میکس مکمل (بازی)</h2></div>
+                    <div class="tile-content"><i class="fa-solid fa-flask"></i><h2>میکس مکمل (دلخواه)</h2></div>
                 </div>
                 <!-- دسته‌ها -->
                 <div class="category-tile cat-herbs" data-category="گیاهان-دارویی"><div class="tile-content"><i class="fa-solid fa-leaf"></i><h2>گیاهان دارویی</h2></div></div>
@@ -373,7 +373,7 @@
             </div>
         </div>
 
-        <!-- صفحه میکسر (بازی) -->
+        <!-- صفحه میکسر (دلخواه) -->
         <div id="mixer-view" class="inner-section" style="background: #fff9fc;">
             <button class="back-btn" onclick="showCategoryView()"><i class="fa-solid fa-arrow-right"></i> بازگشت</button>
             
@@ -650,7 +650,7 @@
             }
 
             // ==========================================
-            // === منطق بازی میکسر (دست نخورده) ===
+            // === منطق  میکسر (دست نخورده) ===
             // ==========================================
             
             let mixerConfig = { max: 1000, step: 100 };
